--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "yarn rollup -c rollup.config.js --watch"
-  },
-  "devDependencies": {
-    "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.4",
-    "@rollup/plugin-node-resolve": "15.2.1",
-    "rollup": "3.28.1"
+    "dev": "bun build ./src/index.js --outdir ./dist --target browser --watch",
+    "build": "bun build ./src/index.js --outdir ./dist --target browser"
   }
 }
